--- a/src/ContinueButton.css
+++ b/src/ContinueButton.css
@@ -15,6 +15,4 @@
 
     /* spacing */
     margin-top: 30px;
-    margin-left: 10px;
-    margin-right: 10px;
 }
