--- a/src/PlayButton.css
+++ b/src/PlayButton.css
@@ -15,8 +15,7 @@
 
     /* spacing */
     margin-top: 30px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-bottom: 30px;
 }
 
 .play-button-sound-icon {
